# Master-Thesis

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.nanodet  Dockerfile.paddle  Dockerfile.speciesnet  Makefile  florence2_probe.py  florence2_probe_output.json  florence2_probe_output1.json  nohup.out  pyproject.toml  recap.md  test.py
docs/: README.md  automatic_image_qualitiy_filtering.md  dataset-supplementation-plan.md  gpu_training_options.md  hardware-proxy-selection.md  knowledge_distillation_research_overview.md  object-detection-models-for-embedded-systems.md  research-and-experimentation-plan.md  species-label-research.md  species-label-selection-extended.md  species-label-selection.md  supplementary-dataset-research-prompt.md  supplementary-dataset-research.md  synthetic-image-generation-model-research.md  thesis-overview.md
reports/: .gitignore  animal_descriptions.csv  class_counts_225.csv  class_counts_480.csv  classes_225.csv  classes_480.csv  coverage_analysis.csv  coverage_gaps.csv  coverage_report.md  family_species_mapping.csv  genus_species_mapping.csv  inaturalist_class_image_counts_225.csv  inaturalist_matched_taxa_225.csv  lila_matched_taxa_225.csv  wikipedia_urls.json
research/: A Review of Real-Time Deep Learning–Based Object Detection Models.md  README.md  To crop or not to crop.md  cv-wildlife-classification-resources.md  elicit_search_query.md  sota-survey-prompt.md
resources/: .gitignore  2026-03-17_SN_labels_refined_only.txt  2026-03-19_student_model_labels.txt  2026-03-20_student_model_labels_extended.txt  GBIF_image_counts_v1.csv  always_crop_99710272_22x8_v12_epoch_00148.labels.txt  ls_blanks_exports.csv  refineLabels.py  sci_names_2026-03-17_SN_labels_refined_only.txt  speciesnet_model_cards.md  speciesnet_taxonomy_release.txt
scripts/: _image_utils.py  analyse_dataset_coverage.py  analyze_dataset_quality.py  analyze_inaturalist_metadata.py  (+22 more)
(+57 files in other folders)
